--- a/styles/Struggle.css
+++ b/styles/Struggle.css
@@ -41,3 +41,15 @@ font-style: normal;
 font-weight: 800;
 line-height: normal;
 }
+
+
+@media (max-width:1024px){
+    .Sturggle_wrapper{
+        flex-direction: column-reverse;
+    }
+    .struggle-right img{
+        width: 100%;
+        object-fit: cover;
+        object-position: top;
+    }
+}
