--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,44 +1,56 @@
-.footer_left p{
-color: var(--white-color);
-font-size: 17px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+.footer_left p {
+  color: var(--white-color);
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
-.footer_nav h1{
-color: #FC4C1B;
-font-size: 18px;
-font-style: normal;
-font-weight: 900;
-line-height: normal;
+.footer_nav h1 {
+  color: #fc4c1b;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
 }
-.footer_nav h6{
-color: #FC4C1B;
-font-size: 16px;
-font-style: normal;
-font-weight: 300;
-line-height: normal;
+.footer_nav h6 {
+  color: #fc4c1b;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
 }
-.footer_nav_link{
-color: #FFF;
-font-size: 16px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+.footer_nav_link {
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
-.footer_left{
-    width: 47%;
+.footer_left {
+  width: 47%;
 }
-.footer_nav ul li{
-    margin-top: 1em;
+.footer_nav ul li {
+  margin-top: 1em;
 }
- .nav_social{
-    margin-bottom: 1em;
- }
- .footer{
-    background: #292624;;
- }
- .footer .container{
-    border-bottom: 1px solid rgba(231, 231, 231, 0.40);
-    padding-bottom: 2em;
- }
+.nav_social {
+  margin-bottom: 1em;
+}
+.footer {
+  background: #292624;
+}
+.footer .container {
+  border-bottom: 1px solid rgba(231, 231, 231, 0.4);
+  padding-bottom: 2em;
+}
+
+@media (max-width:550px){
+   .footer_wrapper{
+      flex-direction: column;
+   }
+   .footer_left{
+      width: 100%;
+   }
+   .footer_right{
+      flex-wrap: wrap;
+   }
+}
